--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "ng serve  --proxy-config proxy.conf.json",
+    "start:watch": "ng serve --watch  --proxy-config proxy.conf.json",
+    "build": "ng build --base-href=/TQV6/",
+    "build:prod": "npm run build --prod --aot",
     "test": "ng test"
   },
   "private": true,
@@ -26,6 +27,7 @@
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
     "leaflet": "^1.9.4",
+    "ngx-device-detector": "^6.0.2",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
