--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
     "leaflet": "^1.9.4",
+    "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
