--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:watch": "ng serve --watch  --proxy-config proxy.conf.json",
     "build": "ng build --base-href=/TQV6/",
     "build:prod": "npm run build --prod --aot",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch --runInBand",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -23,9 +25,12 @@
     "@cubejs-client/core": "^0.33.12",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
+    "@types/jest": "^29.5.3",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
+    "jest": "^29.6.2",
+    "jest-preset-angular": "^13.1.1",
     "leaflet": "^1.9.4",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
@@ -48,5 +53,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
+    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
