--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,12 +4,18 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "@angular/localize"
+      "jest"
     ]
   },
+  "files": [
+    "src/test.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
-  ]
+  ],
+  "module": "commonjs",
+  "esModuleInterop": true,
+  "emitDecoratorMetadata": true
 }
