--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "leaflet": "^1.9.4",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
+    "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
