Resolving CommonJS warning error

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,14 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Node Run",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "start", "--", "&&", "npm", "run", "watch"],
+    },
+
     {
       "name": "ng serve",
       "type": "chrome",
