--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
     "leaflet": "^1.9.4",
+    "lodash-es": "^4.17.21",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
     "primeicons": "^6.0.1",
@@ -48,6 +49,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@angular/localize": "^16.1.5",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.6.0",
