--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest-preset-angular": "^13.1.1",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
     "primeicons": "^6.0.1",
