VQ-294 | Ability to list all tickets for the manager(Modifying the whole UI pages designs

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,10 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "allowedCommonJsDependencies": [
-              "crypto-js"
+              "crypto-js",
+              "moment",
+              "cubejs-client",
+              "cross-fetch"
            ],
             "polyfills": [
               "zone.js"
