--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "turnquestv6-fe",
-  "version": "0.0.0",
+  "version": "6.2.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve  --proxy-config proxy.conf.json",
     "start:watch": "ng serve --watch  --proxy-config proxy.conf.json",
-    "build": "ng build --base-href=/TQV6/",
+    "build": "ng build --base-href=/TQV6/ --source-map",
     "build:prod": "npm run build --prod --aot",
     "test": "jest",
     "test:watch": "jest --watch --runInBand",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "explore": "source-map-explorer dist/**/main.*.js --no-border-checks"
   },
   "private": true,
   "dependencies": {
@@ -59,6 +60,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "source-map-explorer": "^2.5.3",
     "typescript": "~5.1.3"
   },
   "jest": {
