--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.29.4",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
+    "ngx-spinner": "^16.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
