--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/jest": "^29.5.3",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
+    "flag-icons": "^6.10.0",
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
     "leaflet": "^1.9.4",
