--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto-js": "^4.1.1",
     "flag-icons": "^6.10.0",
     "jest": "^29.6.2",
+    "jest-createspyobj": "^2.0.0",
     "jest-preset-angular": "^13.1.1",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
