VQ-726 | Ability to Provide Clients with Quick Insurance Quotes on a Single Screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     "noImplicitOverride": true,
+    "resolveJsonModule": true,
     "noPropertyAccessFromIndexSignature": true,
+    "allowSyntheticDefaultImports": true,
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
