VQ-313 Set up compodoc library to generate dynamic documentation UI

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch --runInBand",
     "test:coverage": "jest --coverage",
-    "explore": "source-map-explorer dist/**/main.*.js --no-border-checks"
+    "explore": "source-map-explorer dist/**/main.*.js --no-border-checks",
+    "docs": "compodoc -p tsconfig.json -s -n \"TurnQuest Version 6 App documentation\" -d ./documentation"
   },
   "private": true,
   "dependencies": {
@@ -57,6 +58,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@angular/localize": "^16.1.5",
+    "@compodoc/compodoc": "^1.1.21",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
