--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch --runInBand",
     "test:coverage": "jest --coverage",
     "explore": "source-map-explorer dist/**/main.*.js --no-border-checks",
-    "docs": "compodoc -p tsconfig.json -s -n \"TurnQuest Version 6 App documentation\" -d ./documentation"
+    "docs": "compodoc -p tsconfig.json -s -n \"TurnQuest Version 6 App documentation\" -d ./documentation --theme vagrant --disableSourceCode --disableTemplateTab --disableStyleTab -r --port 8085 --open --silent --hideGenerator",
   },
   "private": true,
   "dependencies": {
