--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "setupFilesAfterEnv": [
       "<rootDir>/setup-jest.ts"
     ],
-    "globalSetup": "jest-preset-angular/global-setup"
+    "globalSetup": "jest-preset-angular/global-setup",
+    "transformIgnorePatterns": [
+      "!node_modules/@cubejs-client/core"
+    ]
   }
 }
