--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
+    "ngx-mask": "^15.1.5",
     "ngx-spinner": "^16.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
