--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve  --proxy-config proxy.conf.json",
     "start:watch": "ng serve --watch  --proxy-config proxy.conf.json",
-    "build": "ng build --base-href=/TQV6/ --source-map",
+    "build-x": "ng build --base-href=/TQV6/ --source-map",
+    "build": "ng build --base-href=/TQV6/",
+    "buildn": "ng build",
     "build:prod": "npm run build --prod --aot",
     "test": "jest",
     "test:watch": "jest --watch --runInBand",
@@ -24,6 +26,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@costlydeveloper/ngx-awesome-popup": "^3.2.0",
     "@cubejs-client/core": "^0.33.12",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
