--- a/Dockerfile.angular
+++ b/Dockerfile.angular
@@ -1,44 +1,18 @@
-# Stage 1: Build the Angular application
-FROM node:18.16.1-alpine AS builder
-
-WORKDIR /app
-
-# Copy package.json and package-lock.json to leverage Docker layer caching
-COPY package*.json ./
-RUN npm install
-
-# Copy only necessary files for building
-COPY angular.json ./
-COPY tsconfig.json ./
-COPY src ./src
-# COPY e2e ./e2e
-COPY tsconfig.*.json ./
-# COPY tslint.json ./
-COPY webpack.config.js ./
-
-COPY setup-jest.ts ./
-COPY proxy.conf.json ./
-
-# Build the Angular application for production
-RUN npm run buildn --prod
-
-
-# # Use a build argument to invalidate the cache
-ARG CACHEBUST=1
-
-# Stage 3: Create a lightweight Nginx image
-FROM nginx:mainline-alpine3.18-slim
-
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
-# Copy the built Angular app and Compodoc documentation from previous stages
-COPY --from=builder /app/dist/turnquestv6-fe/ /usr/share/nginx/html/
-# COPY --from=compodoc-builder /app/documentation /usr/share/nginx/html/documentation
-
-# Expose port 80 to the outside world
+ARG WORK_DIR=/build
+# FROM node:18.16.1-alpine  as builder
+# ARG WORK_DIR
+# ENV PATH ${WORK_DIR}/node_modules/.bin:$PATH
+# RUN mkdir ${WORK_DIR}
+# WORKDIR ${WORK_DIR}
+# COPY package.json ${WORK_DIR}
+# COPY package-lock.json ${WORK_DIR}
+# RUN npm install @angular/cli
+# RUN npm install
+# COPY . ${WORK_DIR}
+# RUN npm run build:prod
+FROM nginx:latest
+ARG WORK_DIR
+# COPY --from=builder ${WORK_DIR}/dist/turnquestv6-fe /usr/share/nginx/html/V6
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-
-# Start the Nginx web server
-CMD ["nginx", "-g", "daemon off;"]
-
-# docker build -t tqfe .
-# docker run -p 8080:80 tqfe
+CMD nginx -g "daemon off;"
