--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,63 @@
-events {}
-http {
-    include /etc/nginx/mime.types;
+server {
+ listen 80;
+ server_name localhost;
 
-    server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
+ location /V6/ {
+        alias /usr/share/nginx/html/V6/;
+        try_files $uri /V6/index.html;
+    }
 
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+    location /documentation/ {
+        alias /usr/share/nginx/html/document/;
+        try_files $uri /documentation/index.html;
+    }
+
+ location /crm {
+      proxy_pass http://10.176.18.211:1025;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+   }
+
+    location /oauth {
+        proxy_pass http://10.176.18.211:1025;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /user {
+        proxy_pass http://10.176.18.211:1025;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /charts {
+        proxy_pass http://localhost:1036/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /gis {
+        proxy_pass http://10.176.18.211:1025;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /turnquest {
+        proxy_pass http://10.176.18.211:1025;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /lms {
+        proxy_pass http://10.176.18.211:1025;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
