--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve  --proxy-config proxy.conf.json",
     "start:watch": "ng serve --watch  --proxy-config proxy.conf.json",
     "build-x": "ng build --base-href=/TQV6/ --source-map",
-    "build": "ng build --base-href=/V6/",
+    "build": "ng build --base-href=/TQV6/",
     "buildn": "ng build",
     "build:prod": "npm run build --prod --aot",
     "test": "jest",
