--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,10 @@
               "./node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/lms-base.scss",
+              "src/assets/css/gis-base.scss",
+              "src/assets/css/report-base.scss"
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
@@ -122,7 +125,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/lms-base.scss",
+              "src/assets/css/gis-base.scss",
+              "src/assets/css/report-base.scss"
             ],
             "scripts": []
           }
