--- a/src/assets/config/config.prod.json
+++ b/src/assets/config/config.prod.json
@@ -6,6 +6,7 @@
     "setup_services":  "crm",
     "chart_services": "charts",
     "gis_services": "gis",
+    "notification_service":"notification",
     "ticket_services": "turnquest",
     "lms": "lms",
     "api":"api"
