--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/jest": "^29.5.3",
+    "angular-paystack": "^1.0.0",
+    "angular4-paystack": "^3.1.2",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
@@ -75,6 +77,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "source-map-explorer": "^2.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.1.3"
   },
   "jest": {
