--- a/src/assets/config/config.prod.json
+++ b/src/assets/config/config.prod.json
@@ -7,6 +7,7 @@
     "chart_services": "charts",
     "gis_services": "gis",
     "notification_service":"notification",
+    "computation_service":"premium/computation",
     "ticket_services": "turnquest",
     "lms": "lms",
     "api":"api"
