--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/jest": "^29.5.3",
     "angular-paystack": "^1.0.0",
+    "angular4-paystack": "^3.1.2",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
