--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
+    "ng2-pdf-viewer": "^10.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^16.0.0",
     "ngx-device-detector": "^6.0.2",
