--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ngx-device-detector": "^6.0.2",
     "ngx-mask": "^15.1.5",
     "ngx-spinner": "^16.0.2",
+    "papaparse": "^5.4.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
