VQ-2064:Ability to generate a cover note (Policy Summary - Policy Details)

--- a/src/assets/config/config.prod.json
+++ b/src/assets/config/config.prod.json
@@ -10,8 +10,8 @@
     "computation_service":"premium/computation",
     "ticket_services": "turnquest",
     "lms": "lms",
-    "api":"api"
-
+    "api":"api",
+     "reports":"turnquest/reports"
   },
 
   "organization": {
