--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ng2-pdf-viewer": "^10.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^16.0.0",
+    "ngx-currency": "^18.0.0",
     "ngx-device-detector": "^6.0.2",
     "ngx-mask": "^15.1.5",
     "ngx-spinner": "^16.0.2",
