--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
     "flag-icons": "^6.10.0",
-    "google-libphonenumber": "^3.2.39",
+    "google-libphonenumber": "^3.2.3",
     "intl-tel-input": "^17.0.3",
     "jest": "^29.6.2",
     "jest-createspyobj": "^2.0.0",
@@ -58,7 +58,7 @@
     "ngx-cookie-service": "^16.0.0",
     "ngx-currency": "^18.0.0",
     "ngx-device-detector": "^6.0.2",
-    "ngx-intl-tel-input-gg": "^1.0.12",
+    "ngx-intl-tel-input": "^3.2.0",
     "ngx-mask": "^15.1.5",
     "ngx-spinner": "^16.0.2",
     "papaparse": "^5.4.1",
