--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
     "flag-icons": "^6.10.0",
     "google-libphonenumber": "^3.2.3",
     "intl-tel-input": "^17.0.3",
