--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@angular/localize": "^16.1.5",
     "@compodoc/compodoc": "^1.1.21",
     "@types/crypto-js": "^4.1.1",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.6.0",
